--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.22",
+    "@mdxeditor/editor": "^3.42.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/qs": "^6.14.0",
+    "ai": "^5.0.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cm6-theme-basic-light": "^0.2.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
+    "next-themes": "^0.4.6",
     "qs": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.5",
+    "youtubei.js": "^15.0.1",
     "zod": "^4.1.4"
   },
   "devDependencies": {
